# prism-microservices

./: .gitignore  README.md
.github/workflows/: deploy-microservice.yml  producer.yml
domain/: pyproject.toml
domain/models/: __init__.py  base.py  cluster.py  drift.py  failure.py  machine.py  prediction.py  reading.py  version.py
domain/utils/: __init__.py  crud.py  db.py
producer/: Dockerfile  __init__.py  config.py  deployment.yaml
producer/services/: producer.py  server.py  storage.py
